fmt 对代码进行格式化